trying to fix gap between header and userpage background

--- a/src/app/users/view/view.component.css
+++ b/src/app/users/view/view.component.css
@@ -24,4 +24,10 @@ body {
     content: "";
     display: table;
     clear: both;
+    margin-top: 0;
+}
+
+
+h1 {
+    margin-top: 0;
 }
